Fix overflow on ipads in portrait mode

--- a/src/user/journey/prompts/NumericJourneyPrompt.module.css
+++ b/src/user/journey/prompts/NumericJourneyPrompt.module.css
@@ -4,6 +4,7 @@
   align-items: stretch;
   justify-content: space-around;
   height: 54vh;
+  max-height: 568px;
 }
 
 @media screen and (min-height: 876px) {
